# symbiont

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  SECURITY.md  compose.yml  pyproject.toml
agents/audio_transcribe/: README.md  SPEC.md  config.toml  pyproject.toml  requirements-gpu.txt  requirements.txt
agents/audio_transcribe/audio_transcribe/: __init__.py  api.py  audio_quality.py  config.py  diarization.py  errors.py  exporters.py  gpu.py  jobs.py  models.py  noise_reduction.py  observability.py  pipeline.py  postprocessing.py  preprocessing.py  query_workflow.py  queue.py  redis_queue.py  resource_governor.py  scratch.py  security.py  segmentation.py  semantic_extraction.py  speaker_alignment.py  speaker_profiles.py  storage.py  storage_guardian_api.py  transcription.py  types.py  vad.py
agents/audio_transcribe/streaming/: __init__.py  api.py  config.py  llm_postprocess.py  main.py  monitor.py  pyproject.toml  realtime_types.py  security.py
agents/execution_policy_operator/: README.md  pyproject.toml
agents/execution_policy_operator/bash_safety/: __init__.py  api.py  config.py  static_analysis.py  types.py
agents/execution_policy_operator/config/: bash_safety.toml
agents/execution_policy_operator/execution_policy_operator/: __init__.py  api.py
agents/local_evidence_operator/: README.md  pyproject.toml
agents/local_evidence_operator/code_analysis/: __init__.py  api.py  config.py  git_regression.py  graph.py  repo.py  sandbox_plan.py  types.py
agents/local_evidence_operator/config/: code_analysis.toml  data_analysis.toml  ops_diagnostics.toml  security_analysis.toml
agents/local_evidence_operator/data_analysis/: __init__.py  api.py  config.py  data_quality_drift.py  sandbox_plan.py  sql_reconcile.py  types.py
agents/local_evidence_operator/local_evidence_operator/: __init__.py  api.py
agents/local_evidence_operator/ops_diagnostics/: __init__.py  api.py  compose_analysis.py  config.py  incident_timeline.py  log_performance.py  types.py
agents/local_evidence_operator/security_analysis/: __init__.py  api.py  cache_correlation.py  config.py  types.py
agents/material_builder/: README.md  pyproject.toml
agents/material_builder/material_builder/: __init__.py  api.py  config.py  llm_io.py  planning.py  types.py
agents/reasoning_and_response/: README.md  config.toml  pyproject.toml
agents/reasoning_and_response/reasoning_and_response/: __init__.py  api.py  classification.py  config.py  critique.py  types.py  (+3 more)
crates/symbiont-tui/: Cargo.toml  README.md  api.rs  app.rs  hitbox.rs  main.rs  reducer.rs
features/extrator/: README.md  SPEC.md  config.toml  pyproject.toml  service_capabilities.toml
features/material_execution_kernel/: README.md  pyproject.toml
features/personal_context/: README.md  config.toml  pyproject.toml
features/research/: README.md  config.toml  pyproject.toml
features/translation/: Dockerfile  README.md  app.py  cache.py  config.py  config.toml  glossary.py  language_detector.py  models.py  normalizer.py  protected_spans.py  ptpt_linter.py  pyproject.toml  security.py  spellcheck.py  translator.py
features/voice_runtime/: README.md  SPEC.md  pyproject.toml
features/workspace_execution/: README.md  pyproject.toml
obsidian-rag/: CAPABILITY.yaml  README.md  SECURITY.md  pyproject.toml  rag_config.py  registry.py  requirements.txt  service_capabilities.toml  tuning.py
obsidian-rag/api/: app.py  schemas.py
obsidian-rag/cag/: __init__.py  freshness.py  packs.py  store.py
obsidian-rag/chunking/: __init__.py  adaptive.py  code.py  document.py  markdown.py  repo_overview.py  treesitter.py
obsidian-rag/docs/: README.md  api.md  architecture.md  cag.md  configuration.md  diagrams.md  graphify.md  ingestion.md  integration.md  observability.md  overview.md  retrieval.md  services.md
obsidian-rag/embeddings/: __init__.py  base.py  cache.py  ollama.py
obsidian-rag/evals/: golden.sample.json
obsidian-rag/integrations/: external_services.py  resource_governor_client.py
obsidian-rag/llm/: __init__.py  base.py  ollama.py
obsidian-rag/observability/: SPEC.md  __init__.py  _dispatcher.py  dashboard.py
obsidian-rag/obsidian_rag/: __init__.py  config.py  metadata.py  registry.py  tuning.py
obsidian-rag/pipeline/: adhoc_sources.py  backup.py  governor.py  ingest.py  manifest.py  sync.py  vault_sync.py  webhook.py
obsidian-rag/prompts/: templates.py
obsidian-rag/retrieval/: SPEC.md  audit.py  cross_encoder_reranker.py  eval.py  fusion.py  graph_context.py  hyde.py  intent.py  observe.py  rag.py  reranker.py  router.py  sparse.py  tokenization.py
obsidian-rag/scripts/: monitor_rag.sh  run_rag_eval.py
obsidian-rag/store/: __init__.py  base.py  qdrant_store.py
obsidian-rag/workflows/: SPEC.md  __init__.py  reprocess.py  temporal_client.py  worker.py
storage_guardian/: CAPABILITY.yaml  README.md  SPEC.md  __init__.py  app.py  archive_reader.py  classifier.py  cli.py  client.py  config.py  derived_config.py  executor.py  explicit_archive.py  fallback.py  hashing.py  index.py  lifecycle_math.py  path_safety.py  placement.py  planner.py  pyproject.toml  query_execution.py  query_intents.py  relocation.py  resource_guard.py  restore_execution.py  safety.py  scanner.py  service_capabilities.toml  storage_control.py  structure.py  verifier.py
storage_guardian/adapters/: __init__.py  audio.py  base.py  duckdb.py  filesystem.py  images.py  models.py  qdrant.py  sqlite.py
storage_guardian/api/: routes.py
storage_guardian/compressors/: __init__.py  base.py  sevenzip.py  zstd.py
storage_guardian/integrations/: __init__.py  resource_governor_client.py
storage_guardian/sql/: execute_294.sql  execute_329.sql  execute_359.sql  execute_375.sql  execute_397.sql  execute_423.sql  execute_425.sql  execute_463.sql  execute_495.sql  execute_520.sql  execute_563.sql  execute_583.sql  execute_585.sql  execute_643.sql  execute_649.sql  execute_653.sql  execute_731.sql  execute_749.sql  executemany_361.sql  extra_190_2.sql  extra_62_1.sql  fstring_486_3.sql  fstring_706.sql  fstring_709_4.sql  fstring_712_2.sql
(+1108 files in other folders)
