[project]
name = "ai-local"
version = "1.0.0"
description = "Local AI system — symbiont + RAG + agents (Docker Compose monorepo)"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
    "sharedai @ git+https://github.com/PedroMglo/sharedai.git@3bc5aed169e8da9d5297e6ae10a50cc906e2d27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "coverage>=7.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-requests>=2.31",
    "pre-commit>=3.2",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["config*", "context_governor*", "orchestrator*"]
exclude = ["tests*", "agents*", "features*", "obsidian-rag*", "storage_guardian*"]

[tool.setuptools.package-data]
"orchestrator.agentic" = ["prompt/*.md", "sql/*.sql"]
"orchestrator.analytics" = ["sql/*.sql"]
"orchestrator.cli" = ["sql/*.sql"]
"orchestrator.core" = ["prompt/*.md", "sql/*.sql"]
"orchestrator.observability" = ["sql/*.sql"]
"orchestrator.pipeline.nodes" = ["prompt/*.md"]
"orchestrator.routing" = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "\\.venv/"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["obsidian-rag/obsidian_rag", "orchestrator"]
omit = ["tests/*"]

[tool.bandit]
exclude_dirs = [
  ".git",
  ".venv",
  "venv",
  "env",
  "__pycache__",
  "tests",
  "build",
  "dist",
  "data",
  "models",
  "qdrant_storage",
  "storage",
  "embeddings"
]

skips = [
  "B101",   # assert used (expected in tests)
  "B104",   # bind all interfaces — guarded by api_key check in code
  "B108",   # hardcoded tmp — frozenset of dangerous paths, not a temp file
  "B110",   # try/except/pass (intentional silent fallback patterns)
  "B112",   # try/except/continue (intentional)
  "B310",   # urllib.urlopen — URL is a controlled local Ollama endpoint
  "B404",   # import subprocess (required for system commands)
  "B603",   # subprocess without shell=True (safe — no user input)
  "B607",   # partial executable path (controlled paths)
  "B608"    # SQL string formatting — placeholders are parameterised, not user input
]
