[project]
name = "audio-transcribe"
version = "0.1.0"
description = "Local async audio/video transcription service with GPU support"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "sharedai @ git+https://github.com/PedroMglo/sharedai.git@3bc5aed169e8da9d5297e6ae10a50cc906e2d27",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "faster-whisper>=1.0",
    "numpy>=1.26",
    "tomli>=2.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
diarization = [
    "pyannote.audio>=3.1",
    "torch>=2.1",
    "torchaudio>=2.1",
]
gpu = [
    "nvidia-ml-py>=12.0",
]
redis = [
    "redis>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
