[project]
name = "local-evidence-operator"
version = "0.1.0"
description = "Consolidated read-only local evidence operator for code, data, ops, and security evidence"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "local_evidence_operator*",
    "code_analysis*",
    "data_analysis*",
    "ops_diagnostics*",
    "security_analysis*",
]

[tool.setuptools.package-data]
data_analysis = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
