[project]
name = "material-builder-agent"
version = "0.1.0"
description = "Material planning, file, chunk, issue and patch proposal contracts"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["material_builder*"]

[tool.setuptools.package-data]
material_builder = ["prompt/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
