[package]
name = "symbiont-tui"
version = "0.1.0"
edition = "2021"
description = "Rust/Ratatui terminal UX for the ai-local Symbiont runtime"
publish = false

[[bin]]
name = "symbiont-tui"
path = "main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
futures-util = "0.3"
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
insta = "1.40"
