[project]
name = "extrator-feature"
version = "0.1.0"
description = "Document ETL and file conversion feature for ai-local"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "pypdf>=6.0",
    "python-magic>=0.4",
    "tomli>=2.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
docling = [
    "docling>=2.0",
]
markitdown = [
    "markitdown[pdf,docx,pptx,xlsx,xls]>=0.1",
]
tika = [
    "tika>=3.1",
]
unstructured = [
    "unstructured>=0.15",
]
all-parsers = [
    "docling>=2.0",
    "pypdf>=6.0",
    "markitdown[pdf,docx,pptx,xlsx,xls]>=0.1",
    "tika>=3.1",
    "unstructured>=0.15",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
extrator = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
