[project]
name = "translation-feature"
version = "0.1.0"
description = "Local language normalization and optional translation feature for ai-local"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
neural = [
    "ctranslate2>=4.4",
    "sentencepiece>=0.2",
    "tokenizers>=0.19",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "app",
    "cache",
    "config",
    "glossary",
    "language_detector",
    "models",
    "normalizer",
    "protected_spans",
    "ptpt_linter",
    "security",
    "spellcheck",
    "translator",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
