[project]
name = "voice-runtime-feature"
version = "0.1.0"
description = "Local-first voice runtime contracts and host gateway test harness"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
gateway = [
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
