[project]
name = "audio-intelligence-platform"
version = "2.0.0"
description = "Unified real-time + batch audio transcription platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=12.0",
    "redis[hiredis]>=5.0",
    "httpx>=0.25",
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py>=12.0"]
